--- a/LG-DEMO1/oauth-server/pom.xml
+++ b/LG-DEMO1/oauth-server/pom.xml
@@ -98,11 +98,11 @@
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-		<dependency>
+		<!-- <dependency>
 		    <groupId>com.google.guava</groupId>
 		    <artifactId>guava</artifactId>
-		    <version>26.0-jre</version>
-		</dependency>
+		    <version>25.0-jre</version>
+		</dependency>  -->
         
 	</dependencies>
 
